# ztl

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
src/ztl/cmd/: remote_client.py  run_script.py
src/ztl/core/: client.py  config.py  handler.py  protocol.py  publisher.py  server.py  subscriber.py  task.py
src/ztl/example/: echo_script.yaml  sample_conf.yaml  sample_script.yaml  sample_script_full.yaml  sample_script_short.yaml  simple_client.py  simple_publisher.py  simple_server.py  simple_subscriber.py  task_client.py  task_server.py
src/ztl/script/: run_remote_script.py  run_script.py
src/ztl_core/: client.py  protocol.py  server.py
src/ztl_example/: simple_client.py  simple_server.py
test/: conftest.py  test_1_installation.py  test_installation.py  test_lifecycle.py
