[project]
name = "ztl"
version = "0.0.6"
authors = [
  { name="XXXX-6 XXXX-2", email="XXXX-6.XXXX-2@googlemail.com" },
]
description = "A thin library relying on zmq to dispatch tasks"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "oyaml",
    "pyzmq",
    "pytest",
    "pytest-xprocess"
]

[project.scripts]
ztl_simple_client = "ztl.example.simple_client:main_cli"
ztl_simple_server = "ztl.example.simple_server:main_cli"
ztl_task_server = "ztl.example.task_server:main_cli"
ztl_task_client = "ztl.example.task_client:main_cli"
ztl_run_script = "ztl.script.run_script:main_cli"

[project.urls]
"Homepage" = "XXXX-7"
"Bug Tracker" = "XXXX-7"
